<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ranking"
        android:layout_width="match_parent"
        android:hint="@string/ranking"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/book_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        tools:srcCompat="@tools:sample/avatars" />


    <TextView
        android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_marginBottom="10dp"
        android:hint="@string/name_of_book"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_marginBottom="10dp"
        android:hint="@string/author_of_book"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/book_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/lorem_book_description" />

    <Button
        android:id="@+id/buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_from_amazon"
        android:layout_gravity="center"
        android:textAlignment="center" />
</LinearLayout>
